# twitter_script

./: .gitignore  main.py  pyproject.toml  test.py
src/: main.py  test.py
src/twitter_block/browser/: init_browser.py
src/twitter_block/config/: __init__.py  config.yaml
src/twitter_block/posts/: get_post.py  set_post.py
src/twitter_block/users/: apply_action.py  check_user.py  get_user.py
src/twitter_block/utils/: follower_status.py  human_timing.py  init_logger.py  load_user.py  program_status.py
