[project]
name = "twitter-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coloredlogs>=15.0.1",
    "configparser>=7.2.0",
    "pyyaml>=6.0.2",
    "selenium>=4.32.0",
    "setuptools>=80.3.1",
    "undetected-chromedriver>=3.5.5",
]

[dependency-groups]
debug = [
    "ipykernel>=6.29.5",
]
